<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.ForgotPassword">


    <RelativeLayout
        android:id="@+id/topBarFP"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/exitFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/back"
            tools:ignore="ContentDescription" />


    </RelativeLayout>

    <TextView
        android:id="@+id/fp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBarFP"
        android:layout_marginStart="15dp"
        android:text="@string/forgot_password_2"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/fp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp1"
        android:layout_marginStart="17dp"
        android:layout_marginTop="3dp"
        android:text="@string/please_enter_your_registered_email_id"
        android:textColor="@color/lightblack"
        android:textSize="16sp" />


    <ImageView
        android:id="@+id/su3"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@+id/fp2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/forgot_pass"
        tools:ignore="ContentDescription" />



    <RelativeLayout
        android:id="@+id/emailFP"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/su3"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/iconFP1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/email_signup"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailSULayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/iconFP1"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/emailFPEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/submitFP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/emailFP"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitFP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/donthaveaccountFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/lightblack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpButtonFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/donthaveaccountFP"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </RelativeLayout>


</RelativeLayout>